# st_package_reviewer

./: .coveragerc  .flake8  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  dev-requirements.in  dev-requirements.txt  jsonc.py  package_reviewer.sublime-project  pyproject.toml  pytest.ini  requirements.in  requirements.txt  semver.py  setup.py  tox.ini
.github/workflows/: ci.yml  release.yml
gh_action/: README.md  action.sh  action.yml  diff_repository.py  parse_workspace.py
package_reviewer/: __init__.py  __main__.py  base.py  file.py  jsonc.py  repo_tools.py  runner.py
package_reviewer/check/: __init__.py  report.py
package_reviewer/check/file/: __init__.py  check_keymaps.py  check_messages.py  check_mousemaps.py  check_no-sublime-package.py  check_redundant_files.py  check_resource_file_validity.py  check_resource_files.py
package_reviewer/check/repo/: __init__.py  check_only_prerelease_tags.py  check_semver_tags.py  check_tags.py
package_reviewer/checkers/: __init__.py  check_keybindings.py  check_keymaps.py  check_messages.py  check_mousemaps.py  check_no-sublime-package.py  check_plugins_in_root.py  check_redundant_files.py  check_resource_files.py
package_reviewer/checks/: __init__.py  check_messages.py
package_reviewer/lib/: __init__.py
st_package_reviewer/: __init__.py  __main__.py  repo_tools.py  runner.py
st_package_reviewer/check/: __init__.py
st_package_reviewer/check/file/: __init__.py  check_command_names.py  check_keymaps.py  check_messages.py  check_os_system_calls.py  check_platform_usage.py  check_resource_file_validity.py  check_resource_files.py
st_package_reviewer/check/file/ast/: __init__.py  check_command_names.py  check_initialized_api.py  check_no_modify_sys_path.py  check_os_system_calls.py  check_platform_usage.py
st_package_reviewer/check/repo/: check_readme.py  check_tags.py
tests/: test_file_checkers.py  test_reviewer.py
