[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "st_package_reviewer"
version = "0.4.0-dev"
description = "Review packages for Sublime Text."
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/packagecontrol/st_package_reviewer"
repository = "https://github.com/packagecontrol/st_package_reviewer"
packages = [
    { include = "st_package_reviewer" },
    { include = "tests", format = "sdist" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Quality Assurance',
]

[tool.poetry.scripts]
st_package_reviewer = "st_package_reviewer.__main__:main"

[tool.poetry.dependencies]
"github3.py" = "^1.3.0"
pyperclip = "^1.7.0"
python = "^3.6"

# Actually dev dependencies, but those can't be specified in extras.
# https://github.com/python-poetry/poetry/issues/129
flake8 = { version = "^3.9.2", optional = true }
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest = { version = "^5.4.3", optional = true }
pytest-cov = { version = "^2.12.0", optional = true }
pytest-watch = { version = "^4.2.0", optional = true }
tox = { version = "^3.23.1", optional = true }

[tool.poetry.dev-dependencies]
# See optional dependencies above.

[tool.poetry.extras]
test = ["pytest", "pytest-cov"]
test-local = ["pytest-watch", "tox"]
flake8 = ["flake8", "flake8-docstrings"]


[tool.pytest]
testpaths = "tests"
