[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "st_package_reviewer"
version = "0.4.0-dev"
description = "Review packages for Sublime Text."
authors = ["FichteFoll <fichtefoll2@googlemail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/packagecontrol/st_package_reviewer"
repository = "https://github.com/packagecontrol/st_package_reviewer"
packages = [
    { include = "st_package_reviewer" },
    { include = "tests", format = "sdist" },
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Software Development :: Quality Assurance',
]

[tool.poetry.scripts]
st_package_reviewer = "st_package_reviewer.__main__:main"

[tool.poetry.dependencies]
"github3.py" = "^4.0.0"
pyperclip = "^1.7.0"
python = "^3.8.1"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-cov = "^5"

[tool.poetry.group.test-local.dependencies]
pytest-watch = "^4.2.0"
tox = "^3.23.1"


[tool.pytest]
testpaths = "tests"
