[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "st-package-reviewer"
dynamic = ["version"]
description = "Review packages for Sublime Text."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "FichteFoll", email = "fichtefoll2@googlemail.com" }]
requires-python = ">=3.13,<4.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
  "github3.py>=4,<5",
  "pyperclip>=1.7,<2",
]

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=5,<6",
  "pytest-xdist>=3,<4",
  "flake8>=7,<8",
  "flake8-docstrings>=1.7,<2",
]

[project.scripts]
st_package_reviewer = "st_package_reviewer.__main__:main"

[project.urls]
Homepage = "https://github.com/packagecontrol/st_package_reviewer"
Repository = "https://github.com/packagecontrol/st_package_reviewer"

[tool.hatch.build.targets.sdist]
exclude = [
  ".*",
  "*.lock",
  "*.sublime-project",
]

[tool.hatch.version]
source = "vcs"

# Use Git tags like `v1.2.3` for versions
[tool.hatch.build.hooks.vcs]
version-file = "st_package_reviewer/_version.py"
tag-pattern = "v{version}"

[tool.pytest.ini_options]
norecursedirs = [
  ".*",
  "__pycache__",
  "build",
  "dist",
]
